Fix various layout issues with Ipad Portrait orientation (768x1024). Changed bootstrap classes on main page to improve overall support on small and extremely small layouts

--- a/main/assets/css/main.css
+++ b/main/assets/css/main.css
@@ -629,3 +629,18 @@ a:after {
         padding-top: 0px;
     }    
 }
+
+@media only screen and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
+    /* (768x1024) iPad 1 & 2, Portrait */    
+    #greywrap {
+        background: #f5f5f5;
+        margin-top: 0px;
+        border-bottom: 1px solid #ddd;
+        text-align: center;
+        padding-top: 0px;
+    }    
+    #nnedi_portrait {
+        width: 400px;
+        margin-top: -110px;
+    }
+}
